array.island.Island.scala.error
Compilation error:
Island:7: error: type mismatch;
 found   : Int
 required: String
      liste = liste + num(i)
                         ^Island:10: error: value length is not a member of Unit
  return liste.length
               ^